# assignment_airbnb_backend

./: README.md  pyproject.toml
common/: models.py
config/: permissions.py  settings.py  urls.py
tweets/: admin.py  filter.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py
tweets/templates/: allTweets.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
